--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
       <section class="bg-black">
         <div class="wrap">
           <div class="text-landing text-shadow aligncenter">
-            <h2 class="text-emoji zoomIn">😎</h2>
+            <!-- <h2 class="text-emoji zoomIn">😎</h2> -->
             <h3><strong>Thank you!</strong></h3>
           </div>
       </section>
