--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
               </li>
               <li>
                 Webseite
-                
+                &#8680;
                 <a href="https://tonyflow90.github.io/wmp-project-3d-website/">
                   <span><strong>Link</strong></span>
                 </a>
@@ -535,7 +535,7 @@
               </li>
               <li>
                 monokulare Tiefenkriterien
-                
+                &#8680;
                 <a href="https://filmlexikon.uni-kiel.de/doku.php/t:tiefenkriterienmonokularetiefenkriterien-6318">
                   <span><strong>Link</strong></span>
                 </a>
@@ -549,7 +549,7 @@
       <section class="bg-black">
         <div class="wrap">
           <div class="text-landing text-shadow aligncenter">
-            <!-- <h2 class="text-emoji zoomIn">😎</h2> -->
+            <h2 class="text-emoji zoomIn">😎</h2>
             <h3><strong>Thank you!</strong></h3>
           </div>
       </section>
