--- a/index.html
+++ b/index.html
@@ -151,22 +151,17 @@
               <!-- <ul> -->
               <li>
                 <p>
-                  <strong> * </strong> Entwickeln einer 3D Webseite
+                  <strong> * </strong>Entwickeln einer 3D Webseite.
               </li>
               <li>
                 <p>
-                  <strong> * </strong>beleuchtet der monokularen Tiefenkriterien
+                  <strong> * </strong>Beleuchten der monokularen Tiefenkriterien.
                 </p>
               </li>
               <li>
                 <p>
-                  <strong> * </strong>räumliche Tiefe durch zweidimensionalen Bild Informationen
-                </p>
-              </li>
-              <li>
-                <p>
-                  <strong> * </strong>einfachere Verbindung der dargestellten Elemente zu real existierenden Objekten zu
-                  schaffen
+                  <strong> * </strong>Ein Verbindung der dargestellten Elemente zu real existierenden Objekten zu
+                  schaffen.
                 </p>
               </li>
             </ul>
@@ -184,24 +179,25 @@
               <ul class="flexblock activity">
                 <!-- <ul class="flexblock reasons"> -->
                 <!-- <ul> -->
+                <p>Monokulare Tiefenkriterien: </p>
                 <li>
                   <p>
-                    <strong> - </strong>bild- und bewegungsbasierten Informationen
+                    <strong> * </strong>bestehen aus bild- und bewegungsbasierten Informationen,
                   </p>
                 </li>
                 <li>
                   <p>
-                    <strong> - </strong>in der Realität ausschließlich in Kombination
+                    <strong> * </strong>treten in der Realität ausschließlich in Kombination auf,
                   </p>
                 </li>
                 <li>
                   <p>
-                    <strong> - </strong>räumliche Tiefe durch zweidimensionalen Bild Informationen
+                    <strong> * </strong>vermitteln eine räumliche Tiefe durch zweidimensionalen Bild Informationen,
                   </p>
                 </li>
                 <li>
                   <p>
-                    <strong> - </strong>zehn verschieden Kriterien
+                    <strong> * </strong>sind unterteilt in zehn verschiedenen Kriterien.
                   </p>
                 </li>
               </ul>
@@ -527,7 +523,7 @@
               </li>
               <li>
                 Webseite
-                &#8680;
+                <!-- &#8680; -->
                 <a href="https://tonyflow90.github.io/wmp-project-3d-website/">
                   <span><strong>Link</strong></span>
                 </a>
@@ -535,7 +531,7 @@
               </li>
               <li>
                 monokulare Tiefenkriterien
-                &#8680;
+                <!-- &#8680; -->
                 <a href="https://filmlexikon.uni-kiel.de/doku.php/t:tiefenkriterienmonokularetiefenkriterien-6318">
                   <span><strong>Link</strong></span>
                 </a>
@@ -549,7 +545,7 @@
       <section class="bg-black">
         <div class="wrap">
           <div class="text-landing text-shadow aligncenter">
-            <h2 class="text-emoji zoomIn">😎</h2>
+            <!-- <h2 class="text-emoji zoomIn">😎</h2> -->
             <h3><strong>Thank you!</strong></h3>
           </div>
       </section>
