--- a/index.html
+++ b/index.html
@@ -151,17 +151,16 @@
               <!-- <ul> -->
               <li>
                 <p>
-                  <strong> * </strong>Entwickeln einer 3D Webseite.
+                  <strong> * </strong>Entwickeln einer 3D Webseite,
               </li>
               <li>
                 <p>
-                  <strong> * </strong>Beleuchten der monokularen Tiefenkriterien.
+                  <strong> * </strong>Beleuchten der monokularen Tiefenkriterien,
                 </p>
               </li>
               <li>
                 <p>
-                  <strong> * </strong>Ein Verbindung der dargestellten Elemente zu real existierenden Objekten zu
-                  schaffen.
+                  <strong> * </strong>Ein Verbindung der dargestellten Elemente zu real existierenden Objekten schaffen.
                 </p>
               </li>
             </ul>
@@ -189,7 +188,7 @@
                 </li>
                 <li>
                   <p>
-                    <strong> * </strong>vermitteln eine räumliche Tiefe durch zweidimensionalen Bild Informationen,
+                    <strong> * </strong>vermitteln eine räumliche Tiefe durch zweidimensionalen Bildinformationen,
                   </p>
                 </li>
                 <li>
@@ -489,13 +488,13 @@
           <div class="wrap">
             <br />
             <p>
-              Das Ziel des Projekt ist, unter Anwendung von monokularen Tiefenkriterien, eine 3D-Website zu
+              Das Ziel des Projekt ist, unter Anwendung von monokularen Tiefenkriterien, eine Website zu
               entwickeln, die dem Nutzer den Eindruck einer dreidimensionalen Webseite vermittelt. Das Thema
               der Seite “Pokemon Sammelkarten” wurde gewählt, um eine einfache Verbindung der dargestellten
               Elemente zu real existierenden Objekten zu schaffen. Zu diesem Zweck wurden die verschiedenen
               Arten der Tiefenkriterien der menschlichen Wahrnehmung und im Besonderen die monokularen
               Tiefenkriterien genauer betrachtet. Bei der Entwicklung wurde auf eine einfache Struktur und einen
-              einfachen Aufbau der Seite geachtet. Für die Umsetzung wurde ausschließlich
+              einfachen Aufbau der Seite geachtet. Für die Umsetzung wurden ausschließlich
               Open-Source-Frameworks und Daten API's genutzt.
             </p>
             <p class="text-landing text-shadow"><strong>*****</strong></p>
@@ -520,7 +519,7 @@
               </li>
               <li>
                 Webseite
-                &#8680;
+                <!-- &#8680; -->
                 <a href="https://tonyflow90.github.io/wmp-project-3d-website/">
                   <span><strong>Link</strong></span>
                 </a>
@@ -528,7 +527,7 @@
               </li>
               <li>
                 monokulare Tiefenkriterien
-                &#8680;
+                <!-- &#8680; -->
                 <a href="https://filmlexikon.uni-kiel.de/doku.php/t:tiefenkriterienmonokularetiefenkriterien-6318">
                   <span><strong>Link</strong></span>
                 </a>
@@ -542,7 +541,7 @@
       <section class="bg-black">
         <div class="wrap">
           <div class="text-landing text-shadow aligncenter">
-            <h2 class="text-emoji zoomIn">😎</h2>
+            <!-- <h2 class="text-emoji zoomIn">😎</h2> -->
             <h3><strong>Thank you!</strong></h3>
           </div>
       </section>
