--- a/index.html
+++ b/index.html
@@ -104,23 +104,18 @@
             </h1>
             <ul class="flexblock specs">
               <li>
-                <a href="/#slide=3">
+                <a href="#slide=3">
                   <h2 class="text-shadow aligncenter">Aufgabenstellung & Ziel</h2>
                 </a>
               </li>
               <li>
-                <a href="/#slide=5">
+                <a href="#slide=5">
                   <h2 class="text-shadow aligncenter">Monokulare Tiefenkriterien</h2>
                 </a>
               </li>
               <li>
-                <a href="/#slide=9">
-                  <h2 class="text-shadow aligncenter">Webseite</h2>
-                </a>
-              </li>
-              <li>
-                <a href="/#slide=11">
-                  <h2 class="text-shadow aligncenter">Demo</h2>
+                <a href="#slide=16">
+                  <h2 class="text-shadow aligncenter">Webseite & Demo</h2>
                 </a>
               </li>
             </ul>
